# zstd-jni

./: CMakeLists.txt  README.md  build-native-all.cmd  build-native.cmd  build.sbt  copy-native-all.cmd  copy-native.cmd
.github/workflows/: ci.yml
src/main/native/: jni_zdict.c
src/main/native/common/: compiler.h
